fix popup visibility

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -266,7 +266,7 @@ audio {
     border-radius: 10px;
     padding: 0 10px;
     color: #fff;
-    visibility: visible;
+    visibility: hidden;
 }
 #playbgmusic {
     position: absolute;
